fixed about site to not get clipped out of screen when resizing browser, also added images and addres to the edit form

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -61,12 +61,12 @@
   font-weight: 400;
   display: flex;
   justify-content: center;
-  height: 200px;
+  height: 100%;
   border-radius: 10px;
-  width: 400px;
+  width: 20%;
   flex-wrap: wrap;
-  margin-left: 754px;
-  margin-bottom: 20px;
+  margin-left: 39.5%;
+  margin-bottom: 30%;
   box-sizing: border-box;
   padding: 15px;
   margin-top: 15px;
@@ -77,6 +77,7 @@
 
 .about-site-text-color {
   color: #80b4df;
+  
 }
 
 .about {
